# django_ecs_performance_tests

./: .gitignore  Dockerfile  README.md  asgi.Dockerfile  docker-compose.yaml  locustfile.py  pyproject.toml  ws_load_test.js  wsgi.Dockerfile
.github/workflows/: deploy_asgi.yaml  deploy_wsgi.yaml
deploy/: django-asgi.yaml  django-wsgi.yaml  parameters.json
django_ecs_performance_tests/: manage.py
django_ecs_performance_tests/django_ecs_performance_tests/: asgi.py  settings.py  urls.py  wsgi.py
django_ecs_performance_tests/world/: views.py
django_ecs_performance_tests/world/migrations/: 0001_initial.py
django_ecs_performance_tests/world/templates/: base.html  chat_index.html  chat_room.html  fortunes.html
