[project]
name = "django-ecs-performance-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "django-stubs>=5.2.9",
    "django-types>=0.22.0",
    "gunicorn[gevent]>=24.1.1",
    "locust>=2.43.1",
    "orjson>=3.11.6",
    "uvicorn>=0.40.0",
]
